// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`event.actions.custom > Asynchronous confirmation flow > should save action in requested state if notify API returns HTTP 202 1`] = `
{
  "actions": [
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "CREATE",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "annotation": {
        "review.comment": "review.comment-TEXTAREA-0",
        "review.signature": {
          "originalFilename": "abcd.png",
          "path": "/ocrvs/4f095fc4-4312-4de2-aa38-86dcc0f71044.png",
          "type": "image/png",
        },
      },
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {
        "applicant.address": {
          "addressType": "DOMESTIC",
          "administrativeArea": "27160bbd-32d1-4625-812f-860226bfb92a",
          "country": "FAR",
          "streetLevelDetails": {
            "district2": "district2",
            "state": "state",
          },
        },
        "applicant.dob": "1949-05-10",
        "applicant.dobUnknown": false,
        "applicant.name": {
          "firstname": "John",
          "surname": "Doe",
        },
        "recommender.none": true,
        "senior-pass.id": "SP-123456",
        "senior-pass.recommender": false,
      },
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "originalActionId": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "UNASSIGN",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "customActionType": "CONFIRM_SENIOR_MEMBERSHIP",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "CUSTOM",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "READ",
    },
  ],
  "createdAt": "[sanitized]",
  "id": "[sanitized]",
  "trackingId": "[sanitized]",
  "type": "tennis-club-membership",
  "updatedAt": "[sanitized]",
}
`;

exports[`event.actions.custom > Asynchronous confirmation flow > should successfully accept a previously requested action 1`] = `
{
  "actions": [
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "CREATE",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "annotation": {
        "review.comment": "review.comment-TEXTAREA-0",
        "review.signature": {
          "originalFilename": "abcd.png",
          "path": "/ocrvs/4f095fc4-4312-4de2-aa38-86dcc0f71044.png",
          "type": "image/png",
        },
      },
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {
        "applicant.address": {
          "addressType": "DOMESTIC",
          "administrativeArea": "27160bbd-32d1-4625-812f-860226bfb92a",
          "country": "FAR",
          "streetLevelDetails": {
            "district2": "district2",
            "state": "state",
          },
        },
        "applicant.dob": "1949-05-10",
        "applicant.dobUnknown": false,
        "applicant.name": {
          "firstname": "John",
          "surname": "Doe",
        },
        "recommender.none": true,
        "senior-pass.id": "SP-123456",
        "senior-pass.recommender": false,
      },
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "originalActionId": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "UNASSIGN",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "customActionType": "CONFIRM_SENIOR_MEMBERSHIP",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "CUSTOM",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "customActionType": "CONFIRM_SENIOR_MEMBERSHIP",
      "declaration": {},
      "id": "[sanitized]",
      "originalActionId": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "CUSTOM",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "UNASSIGN",
    },
  ],
  "createdAt": "[sanitized]",
  "id": "[sanitized]",
  "trackingId": "[sanitized]",
  "type": "tennis-club-membership",
  "updatedAt": "[sanitized]",
}
`;

exports[`event.actions.custom > returns HTTP409 if trying to execute an action not defined in countryconfig 1`] = `[TRPCError: Custom action configuration not found with name: INVALID_ACTION]`;

exports[`event.actions.custom > returns HTTP409 if trying to execute an action where the condition is not met 1`] = `[TRPCError: Conditions for action: CUSTOM were not met, action cannot be performed]`;

exports[`event.actions.custom > returns HTTP409 if trying to execute an action where the condition is not met 2`] = `
{
  "actions": [
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "CREATE",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "annotation": {
        "review.comment": "review.comment-TEXTAREA-0",
        "review.signature": {
          "originalFilename": "abcd.png",
          "path": "/ocrvs/4f095fc4-4312-4de2-aa38-86dcc0f71044.png",
          "type": "image/png",
        },
      },
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {
        "applicant.address": {
          "addressType": "DOMESTIC",
          "administrativeArea": "27160bbd-32d1-4625-812f-860226bfb92a",
          "country": "FAR",
          "streetLevelDetails": {
            "district2": "district2",
            "state": "state",
          },
        },
        "applicant.dob": "1960-05-10",
        "applicant.dobUnknown": false,
        "applicant.name": {
          "firstname": "John",
          "surname": "Doe",
        },
        "recommender.none": true,
      },
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "originalActionId": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "UNASSIGN",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "READ",
    },
  ],
  "createdAt": "[sanitized]",
  "id": "[sanitized]",
  "trackingId": "[sanitized]",
  "type": "tennis-club-membership",
  "updatedAt": "[sanitized]",
}
`;

exports[`event.actions.custom > successfully executes action 1`] = `
{
  "actions": [
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "CREATE",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "annotation": {
        "review.comment": "review.comment-TEXTAREA-0",
        "review.signature": {
          "originalFilename": "abcd.png",
          "path": "/ocrvs/4f095fc4-4312-4de2-aa38-86dcc0f71044.png",
          "type": "image/png",
        },
      },
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {
        "applicant.address": {
          "addressType": "DOMESTIC",
          "administrativeArea": "27160bbd-32d1-4625-812f-860226bfb92a",
          "country": "FAR",
          "streetLevelDetails": {
            "district2": "district2",
            "state": "state",
          },
        },
        "applicant.dob": "1949-05-10",
        "applicant.dobUnknown": false,
        "applicant.name": {
          "firstname": "John",
          "surname": "Doe",
        },
        "recommender.none": true,
        "senior-pass.id": "SP-123456",
        "senior-pass.recommender": false,
      },
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "originalActionId": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "DECLARE",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "UNASSIGN",
    },
    {
      "assignedTo": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "ASSIGN",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "customActionType": "CONFIRM_SENIOR_MEMBERSHIP",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Requested",
      "transactionId": "[sanitized]",
      "type": "CUSTOM",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "customActionType": "CONFIRM_SENIOR_MEMBERSHIP",
      "declaration": {},
      "id": "[sanitized]",
      "originalActionId": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "CUSTOM",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "UNASSIGN",
    },
    {
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/47f6b2e2-e69e-4401-92d8-35617de8137b.png",
      "createdByUserType": "[sanitized]",
      "declaration": {},
      "id": "[sanitized]",
      "status": "Accepted",
      "transactionId": "[sanitized]",
      "type": "READ",
    },
  ],
  "createdAt": "[sanitized]",
  "id": "[sanitized]",
  "trackingId": "[sanitized]",
  "type": "tennis-club-membership",
  "updatedAt": "[sanitized]",
}
`;
